--- a/package.json
+++ b/package.json
@@ -23,5 +23,5 @@
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject"
     },
-    "proxy": "http://localhost:4200"
+    "proxy": ["http://localhost:4200", "http://localhost:3000"]
 }
