--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "express": "^4.16.0",
         "mongojs": "^2.4.1",
         "mongoose": "^4.11.13",
+        "morgan": "^1.9.0",
         "react": "^16.0.0",
         "react-bootstrap": "^0.31.3",
         "react-dom": "^16.0.0",
