--- a/package.json
+++ b/package.json
@@ -1,28 +1,50 @@
 {
-    "name": "fitrep",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "axios": "^0.16.2",
-        "body-parser": "^1.18.2",
-        "cheerio": "^1.0.0-rc.2",
-        "cors": "^2.8.4",
-        "express": "^4.16.0",
-        "mongojs": "^2.4.1",
-        "mongoose": "^4.11.13",
-        "morgan": "^1.9.0",
-        "react": "^16.0.0",
-        "react-bootstrap": "^0.31.3",
-        "react-dom": "^16.0.0",
-        "react-router-dom": "^4.2.2",
-        "react-scripts": "1.0.14",
-        "request": "^2.83.0"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test --env=jsdom",
-        "eject": "react-scripts eject"
-    },
-    "proxy": "http://localhost:4200"
+  "name": "lifequote",
+  "version": "1.0.0",
+  "description": "Quick Life quoting",
+  "scripts": {
+    "build": "webpack --config=webpack.production.config.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "start": "node dev-server.js"
+  },
+  "dependencies": {
+    "bootstrap": "3.3.5",
+    "classnames": "2.2.0",
+    "es6-promise": "3.0.2",
+    "react": "0.14.2",
+    "react-auto-form": "1.2.2",
+    "react-bootstrap": "0.27.3",
+    "react-dom": "0.14.2",
+    "validator": "4.2.1",
+    "whatwg-fetch": "0.10.1"
+  },
+  "devDependencies": {
+    "babel-core": "5.8.33",
+    "babel-plugin-react-display-name": "2.0.0",
+    "babel-plugin-react-transform": "1.1.1",
+    "react-transform-catch-errors": "1.0.0",
+    "react-transform-hmr": "1.0.1",
+    "redbox-react": "1.1.1",
+
+    "eslint": "1.9.0",
+    "babel-eslint": "4.1.4",
+    "eslint-config-standard": "4.4.0",
+    "eslint-config-standard-react": "1.1.0",
+    "eslint-plugin-react": "3.7.1",
+    "eslint-plugin-standard": "1.3.1",
+
+    "express": "4.13.3",
+    "eventsource-polyfill": "0.9.6",
+    "webpack-dev-middleware" : "1.2.0",
+    "webpack-hot-middleware": "2.4.1",
+
+    "webpack": "1.12.3",
+    "babel-loader": "5.3.2",
+    "css-loader": "0.22.0",
+    "extract-text-webpack-plugin": "0.9.1",
+    "file-loader": "0.8.4",
+    "style-loader": "0.13.0",
+    "url-loader": "0.5.6"
+  }
 }
