--- a/package.json
+++ b/package.json
@@ -24,5 +24,5 @@
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject"
     },
-    "proxy": "https://intense-thicket-90158.herokuapp.com/"
+    "proxy": "http://localhost:4200"
 }
